Correzione del file POM per maven

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.almasb.fxglgames</groupId>
-    <artifactId>Mario</artifactId>
+    <groupId>com.pioneer10</groupId>
+    <artifactId>Pioneer-10</artifactId>
     <version>2.0</version>
 
     <properties>
