--- a/pom.xml
+++ b/pom.xml
@@ -172,8 +172,8 @@
                         <list>com.almasb.fxgl.dsl.components.ProjectileComponent</list>
 
                         <!--     Custom components                  -->
-                        <list>com.pioneer10.model.PlayerComponent</list>
-                        <list>com.pioneer10.model.PlatformerFactory</list>
+                        <list>com.pioneer10.model.PlayerAnimationComponent</list>
+                        <list>com.pioneer10.model.PioneerFactory</list>
 
                     </reflectionList>
                     <target>android</target>
